tests/ui/rfcs/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/call-const-trait-method-fail.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `Runtime: ~const Compat` is not satisfied
  --> $DIR/call-const-trait-method-fail.rs:25:5
   |
LL |     a.plus(b)
   |     ^ the trait `~const Compat` is not implemented for `Runtime`
   |
   = help: the trait `Compat` is implemented for `Runtime`
note: required by a bound in `Plus::plus`
  --> $DIR/call-const-trait-method-fail.rs:3:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Plus::plus`
LL | pub trait Plus {
LL |     fn plus(self, rhs: Self) -> Self;
   |        ---- required by a bound in this associated function

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
